Android: Fix Contructor error message. Fix OS selection not remembered. Add search button. Tizen: Fix alignment for score screen.

--- a/Tizen/css/style.css
+++ b/Tizen/css/style.css
@@ -118,9 +118,6 @@ button, .button{
 	height: 80vh;
 	font-size: 10vw;
 }
-#score, #card{
-	height: 80vh;
-}
 #score_inner, #card_inner{
 	position: relative;
 	top: 50%;
